History: Don't use fixed positioning for Clear Browsing Data button on mobile.
Using fixed positioning for the Clear Browsing Data means that we need to
update the body margins whenever the button is hidden/shown. This is error
prone. The solution is to just use a flexbox to lay out the page, so when
the button is hidden, the results display will take up the extra space.

BUG=285689
R=sergiu@chromium.org

Review URL: https://codereview.chromium.org/23465029

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@224380 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: e530f04bbd85ef586f7c860b498838e9a41a9daa

--- a/chrome/browser/resources/history/history_mobile.css
+++ b/chrome/browser/resources/history/history_mobile.css
@@ -12,16 +12,17 @@ body {
   color: rgb(76, 76, 76);
   height: 100%;
   margin: 0;
-  margin-bottom: 46px;
 }
 
 .page {
+  -webkit-flex-flow: column;
+  display: -webkit-flex;
   height: 100%;
 }
 
 #scrolling-container {
+  -webkit-flex: auto;  /* Container should take up extra vertical space. */
   -webkit-overflow-scrolling: touch;
-  height: -webkit-calc(100% - 46px);
   overflow-y: auto;
 }
 
@@ -169,7 +170,7 @@ input {
   font-weight: bold;
   height: 46px;
   margin: 0;
-  position: fixed;
+  min-height: 46px;
   text-shadow: none;
   text-transform: uppercase;
   width: 100%;
@@ -238,6 +239,21 @@ input {
   -webkit-box-orient: vertical;
   -webkit-box-pack: center;
   display: -webkit-box;
+}
+
+/* Due to crbug.com/295516, iOS must used fixed positioning to place the button
+   at the bottom of the viewport. When that bug is fixed, these rules should be
+   removed and replaced with flexbox rules. */
+.page {
+  margin-bottom: 46px;
+}
+
+#scrolling-container {
+  height: -webkit-calc(100% - 46px);
+}
+
+#clear-browsing-data {
+  position: fixed;
 }
 </if>
 
